--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,29 @@
-# Core TTS/STT API Credentials
-CARTESIA_API_KEY=your_cartesia_authentication_key
-DEEPGRAM_API_KEY=your_deepgram_authentication_key
-ASSEMBLYAI_API_KEY=your_assemblyai_authentication_key
+# Cartesia TTS API
+CARTESIA_API_KEY=your_cartesia_api_key
 
-# Cognitive LLM API Credentials
-GEMINI_API_KEY=your_gemini_authentication_key
-OPENAI_API_KEY=your_openai_authentication_key
-XAI_API_KEY=your_xai_authentication_key
+# Deepgram STT API
+DEEPGRAM_API_KEY=your_deepgram_api_key
 
-# Caching & Database Infrastructure
-REDIS_HOST=your_redis_host_endpoint
-REDIS_PASSWORD=your_redis_authentication_password
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_KEY=your_supabase_authentication_key
+# AssemblyAI STT API (optional fallback)
+ASSEMBLYAI_API_KEY=your_assemblyai_api_key
 
-# Vector Database Configuration
-PINECONE_API_KEY=your_pinecone_authentication_key
+# Gemini Flash (Google Generative AI) API
+GEMINI_API_KEY=your_gemini_api_key
+
+# OpenAI API (fallback for LLM)
+OPENAI_API_KEY=your_openai_api_key
+
+# XAI Grok API (optional, for LLM)
+XAI_API_KEY=your_xai_api_key
+
+# Redis Cache
+REDIS_HOST=your_redis_host
+REDIS_PASSWORD=your_redis_password
+CACHE_TTL=3600
+
+# Supabase Database
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
+
+# Sarvam TTS API (for /v2/generate-audio)
+SARVAM_API_KEY=your_sarvam_api_key
